# Real-Time-Chat

./: CMakeLists.txt
Server/: CMakeLists.txt  Server.cpp  main.cpp
Server/headers/: Server.hpp
Server/headers/interfaces/: IServer.hpp
Server/sources/headers/interfaces/: IServer.hpp
